force-app/main/default/objects/Service_Cloud_Error_Log__c/Service_Cloud_Error_Log__c.object-meta.xml
<CustomObject>
    <description>Service Cloud : Error Logs - Stores all integration errors</description>
    <label>Service Cloud Error Log</label>
    <nameField>
        <displayFormat>Err-{000}</displayFormat>
        <label>Service Cloud Error Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Cloud Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>