force-app/main/default/objects/Service_Cloud_Error_Log__c/fields/EndPointURL__c.field-meta.xml
<CustomField>
    <fullName>EndPointURL__c</fullName>
    <label>EndPointURL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>