force-app/main/default/objects/Service_Cloud_Error_Log__c/fields/Functionality_Name__c.field-meta.xml
<CustomField>
    <fullName>Functionality_Name__c</fullName>
    <label>Functionality Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>