force-app/main/default/objects/Service_Cloud_Error_Log__c/fields/Record_URL__c.field-meta.xml
<CustomField>
    <fullName>Record_URL__c</fullName>
    <label>Record URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>