force-app/main/default/objects/Service_Cloud_Error_Log__c/listViews/Last_15_days.listView-meta.xml
<ListView>
    <fullName>Last_15_days</fullName>
    <columns>NAME</columns>
    <columns>Callout_Request__c</columns>
    <columns>EndPointURL__c</columns>
    <columns>Functionality_Name__c</columns>
    <columns>Record_URL__c</columns>
    <columns>Response__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:15</value>
    </filters>
    <filters>
        <field>Functionality_Name__c</field>
        <operation>contains</operation>
        <value>rma</value>
    </filters>
    <label>Last 15 days</label>
    <language>en_US</language>
</ListView>