force-app/main/default/objects/Service_Cloud_Error_Log__c/listViews/SAP_Error_Today.listView-meta.xml
<ListView>
    <fullName>SAP_Error_Today</fullName>
    <columns>NAME</columns>
    <columns>EndPointURL__c</columns>
    <columns>Callout_Request__c</columns>
    <columns>Response__c</columns>
    <columns>Error_Type__c</columns>
    <columns>Error_Description__c</columns>
    <columns>Functionality_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>SAP Error Today</label>
    <language>en_US</language>
</ListView>