force-app/main/default/objects/Service_Cloud_Error_Log__c/listViews/SAP_RMA_Error.listView-meta.xml
<ListView>
    <fullName>SAP_RMA_Error</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error_Description__c</columns>
    <columns>Error_Type__c</columns>
    <columns>Functionality_Name__c</columns>
    <columns>Record_URL__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Functionality_Name__c</field>
        <operation>contains</operation>
        <value>RMA</value>
    </filters>
    <label>SAP RMA Error</label>
    <language>en_US</language>
</ListView>